chapter: fixed overflow issue

--- a/resources/scss/components/_chapter.scss
+++ b/resources/scss/components/_chapter.scss
@@ -3,7 +3,7 @@
         font-size: 18px;
         margin-top: 30px;
         max-width: 100%;
-        overflow: hidden;
+        overflow: visible;
     }
     &__start{
         display: flex;
